--- a/AngularCrud/src/app/employees/list-employees.component.html
+++ b/AngularCrud/src/app/employees/list-employees.component.html
@@ -1,4 +1,6 @@
-<div *ngFor="let employee of employees">
-  <app-display-employee [employee]="employee"> </app-display-employee>
-</div>
+<button (click)="nextEmployee()" class="btn btn-primary">
+  View Next Employee
+</button>
+<app-display-employee [employee]="employeeToDisplay">
+</app-display-employee>
 
