out put property  Uses

--- a/AngularCrud/src/app/employees/list-employees.component.html
+++ b/AngularCrud/src/app/employees/list-employees.component.html
@@ -1,6 +1,9 @@
-<button (click)="nextEmployee()" class="btn btn-primary">
-  View Next Employee
-</button>
-<app-display-employee [employee]="employeeToDisplay">
-</app-display-employee>
+<h1 *ngIf="dataFromChild">
+  {{ dataFromChild?.name + ' ' + dataFromChild?.gender }}
+</h1>
+<div *ngFor="let employee of employees">
+  <app-display-employee [employee]="employee"
+                        (notify)="handleNotify($event)">
+  </app-display-employee>
+</div>
 
