--- a/AngularCrud/src/app/employees/list-employees.component.html
+++ b/AngularCrud/src/app/employees/list-employees.component.html
@@ -1,9 +1,12 @@
+<h1 #h1Variable></h1>
 <h1 *ngIf="dataFromChild">
   {{ dataFromChild?.name + ' ' + dataFromChild?.gender }}
 </h1>
 <div *ngFor="let employee of employees">
+  <div (click)="h1Variable.innerHTML = childComponent.getNameAndGender()">
   <app-display-employee [employee]="employee"
-                        (notify)="handleNotify($event)">
+                        (notify)="handleNotify($event)" #childComponent>
   </app-display-employee>
+</div>
 </div>
 
