--- a/AngularCrud/src/app/employees/list-employees.component.html
+++ b/AngularCrud/src/app/employees/list-employees.component.html
@@ -6,7 +6,7 @@
 <h1 *ngIf="dataFromChild">
   {{ dataFromChild?.name + ' ' + dataFromChild?.gender }}
 </h1>
-<div *ngFor="let employee of employees | employeeFilter:searchTerm">
+<div *ngFor="let employee of filteredEmployees">
   <div (click)="h1Variable.innerHTML = childComponent.getNameAndGender(); onClick(employee.id)">
   <app-display-employee [employee]="employee"
                         (notify)="handleNotify($event)" #childComponent>
