--- a/AngularCrud/src/app/employees/create-employee.component.html
+++ b/AngularCrud/src/app/employees/create-employee.component.html
@@ -21,9 +21,64 @@
       </div>
 
       <div class="form-group">
+        <label for="phoneNumber">Phone Number</label>
+        <input id="phoneNumber" type="text" class="form-control" name="phoneNumber"
+        [(ngModel)]="employee.phoneNumber">
+      </div>
+
+      <div class="form-group">
+        <label>Contact Preference</label>
+        <div class="form-control">
+          <label class="radio-inline">
+            <input type="radio" name="contactPreference" value="email"
+            [(ngModel)]="employee.contactPreference">
+            Email
+          </label>
+          <label class="radio-inline">
+            <input type="radio" name="contactPreference" value="phone"
+            [(ngModel)]="employee.contactPreference">
+            Phone
+          </label>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label>Gender</label>
+        <div class="form-control">
+          <label class="radio-inline">
+            <input type="radio" name="gender" value="male" [(ngModel)]="employee.gender">
+            Male
+          </label>
+          <label class="radio-inline">
+            <input type="radio" name="gender" value="female" [(ngModel)]="employee.gender">
+            Female
+          </label>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="form-control">
+          <label class="checkbox-inline">
+            <input type="checkbox" name="isActive" [(ngModel)]="employee.isActive">Is Active
+          </label>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="department">Department</label>
+        <select id="department" name="department"
+                [(ngModel)]="employee.department" class="form-control">
+          <option value="1">Help Desk</option>
+          <option value="2">HR</option>
+          <option value="3">IT</option>
+          <option value="4">Payroll</option>
+        </select>
+      </div>
+
+      <div class="form-group">
         <label for="photoPath">Photo Path</label>
         <input id="photoPath" type="text" class="form-control" name="photoPath" [(ngModel)]="employee.photoPath">
       </div>
+
       <div class="form-group">
         <img [src]="employee.photoPath" height="200" width="200" *ngIf="previewPhoto" />
       </div>
