--- a/AngularCrud/src/app/employees/create-employee.component.html
+++ b/AngularCrud/src/app/employees/create-employee.component.html
@@ -8,71 +8,96 @@
 
       <div class="form-group" [class.has-error]="name.invalid && name.touched">
         <label for="name" class="control-label">Name</label>
-        <input id="name" required type="text" class="form-control" name="name"
-               [(ngModel)]="employee.name" #name="ngModel">
+        <input id="name" required type="text" class="form-control" name="name" [(ngModel)]="employee.name" #name="ngModel">
         <span class="help-block" *ngIf="name.invalid && name.touched">
           Name is required
         </span>
       </div>
 
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input id="email" type="text" class="form-control" name="email" [(ngModel)]="employee.email">
+      <div class="form-group"  [class.has-error]="email.invalid && email.touched">
+        <label for="email" class="control-label">Email</label>
+        <input id="email" [required]="contactPreference.value=='email'"  [email]="employee.email!==''"
+        type="text" class="form-control" name="email" [(ngModel)]="employee.email" #email="ngModel">
+        <span class="help-block" *ngIf="email.errors?.required && email.touched">
+          Email is required
+        </span>
+        <span class="help-block" *ngIf="email.errors?.email && email.touched">
+          Email is Invalid
+        </span>
       </div>
 
-      <div class="form-group">
-        <label for="phoneNumber">Phone Number</label>
-        <input id="phoneNumber" type="text" class="form-control" name="phoneNumber"
-        [(ngModel)]="employee.phoneNumber">
+      <div class="form-group" [class.has-error]="phoneNumber.invalid">
+        <label for="phoneNumber" class="control-label">Phone Number</label>
+        <input id="phoneNumber" type="text" class="form-control" name="phoneNumber" [(ngModel)]="employee.phoneNumber"  [required]="contactPreference.value=='phone'"
+        #phoneNumber="ngModel">
+        <span class="help-block" *ngIf="phoneNumber.errors?.required">
+          Phone Number is required
+        </span>
       </div>
 
-      <div class="form-group">
-        <label>Contact Preference</label>
+      <div class="form-group" [class.has-error]="contactPreference.invalid">
+        <label class="control-label">Contact Preference</label>
         <div class="form-control">
           <label class="radio-inline">
-            <input type="radio" name="contactPreference" value="email"
-            [(ngModel)]="employee.contactPreference">
-            Email
+            <input type="radio" name="contactPreference" value="email" [(ngModel)]="employee.contactPreference" required #contactPreference="ngModel"> Email
           </label>
           <label class="radio-inline">
-            <input type="radio" name="contactPreference" value="phone"
-            [(ngModel)]="employee.contactPreference">
-            Phone
+            <input type="radio" name="contactPreference" value="phone" [(ngModel)]="employee.contactPreference" required #contactPreference="ngModel"> Phone
           </label>
         </div>
+        <span class="help-block" *ngIf="contactPreference.errors?.required">
+          Contact Preference is required
+      </span>
       </div>
 
-      <div class="form-group">
-        <label>Gender</label>
+      <div class="form-group" [class.has-error]="gender.invalid && gender.touched">
+        <label class="control-label">Gender</label>
         <div class="form-control">
           <label class="radio-inline">
-            <input type="radio" name="gender" value="male" [(ngModel)]="employee.gender">
-            Male
+            <input type="radio" name="gender" value="male" [(ngModel)]="employee.gender"  required #gender="ngModel"> Male
           </label>
           <label class="radio-inline">
-            <input type="radio" name="gender" value="female" [(ngModel)]="employee.gender">
-            Female
+            <input type="radio" name="gender" value="female" [(ngModel)]="employee.gender"  required #gender="ngModel"> Female
           </label>
         </div>
+        <span class="help-block" *ngIf="gender.invalid && gender.touched">
+          Gender is required
+        </span>
       </div>
 
-      <div class="form-group">
+      <div class="form-group" [class.has-error]="isActive.invalid && isActive.touched">
         <div class="form-control">
-          <label class="checkbox-inline">
-            <input type="checkbox" name="isActive" [(ngModel)]="employee.isActive">Is Active
+          <label class="checkbox-inline control-label">
+            <input type="checkbox" [required]="employee.isActive==null"  name="isActive" name="isActive" [(ngModel)]="employee.isActive" 
+            #isActive="ngModel">Is Active
           </label>
         </div>
+        <span class="help-block"
+        *ngIf="isActive.errors?.required && isActive.touched">
+    Is Active is required
+  </span>
       </div>
-      <div class="form-group">
-        <label for="department">Department</label>
-        <select id="department" name="department"
-                [(ngModel)]="employee.department" class="form-control">
-          <option value="1">Help Desk</option>
-          <option value="2">HR</option>
-          <option value="3">IT</option>
-          <option value="4">Payroll</option>
+      <div class="form-group"  [class.has-error]="department.touched && department.invalid">
+        <label for="department" class="control-label">Department</label>
+
+        <select id="department" name="department" [(ngModel)]="employee.department" class="form-control" required #department= "ngModel">
+          <option  disabled  [ngValue]="null">Select Department</option>   
+          <option *ngFor="let dept of departments" [value]="dept.id">
+            {{dept.name}}
+          </option>
         </select>
+        <span class="help-block" *ngIf="department.touched && department.invalid">
+          Department is required
+        </span>
       </div>
+      
+      <div class="row">
+        <div class="form-group col-md-4">
+          <label for="dateOfBirth">Date of Birth</label>
+          <input id="dateOfBirth" name="dateOfBirth" [(ngModel)]="employee.dateOfBirth" type="date" class="form-control" />
+        </div>
+      </div>
+
 
       <div class="form-group">
         <label for="photoPath">Photo Path</label>
@@ -98,5 +123,4 @@
 
 Angular Generated Forom Model : {{employeeForm.value | json}}
 <br/>
-<br/>
-Our Employee Model : {{ employee | json}}
+<br/> Our Employee Model : {{ employee | json}}
