--- a/AngularCrud/src/app/employees/create-employee.component.html
+++ b/AngularCrud/src/app/employees/create-employee.component.html
@@ -77,16 +77,16 @@
     Is Active is required
   </span>
       </div>
-      <div class="form-group"  [class.has-error]="department.touched && department.invalid">
+      <div class="form-group"  [class.has-error]="department.touched && department.errors?.defaultSelected">
         <label for="department" class="control-label">Department</label>
 
-        <select id="department" name="department" [(ngModel)]="employee.department" class="form-control" required #department= "ngModel">
-          <option  disabled  [ngValue]="null">Select Department</option>   
+        <select id="department" name="department" appSelectValidator="-2" [(ngModel)]="employee.department" class="form-control" required #department= "ngModel">
+          <option    value="-2">Select Department</option>   
           <option *ngFor="let dept of departments" [value]="dept.id">
             {{dept.name}}
           </option>
         </select>
-        <span class="help-block" *ngIf="department.touched && department.invalid">
+        <span class="help-block" *ngIf="department.touched && department.errors?.defaultSelected">
           Department is required
         </span>
       </div>
